Fix component tests